--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Form Application</title>
+    <title>Employee Form Application</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Why would you off JavaScript bro?</noscript>
     <div id="root"></div>
   </body>
 </html>
