fix: mass apply selection logic

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta
       name="description"
     />
-    <title>Employee Form Application</title>
+    <title>LinkedOut</title>
   </head>
   <body>
     <noscript>Why would you off JavaScript bro?</noscript>
